Created Movie, MovieMapper, MovieRepository, liquibase.propertiesm db.changelog-1.0.sql, db.changelog-master.xml, db.data-1.0.sql, MovieMapperTest, MovieRepositoryTest, application-test.yml, test-data.sql, test-schema.sql. Added spring-boot-data-jpa, postgresql, mapstruct, mapstruct-processor, dbunit, liquibase, h2 dependencies and docker-compose.yml file.