@@ -4,7 +4,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import dev.aziz.movies.dtos.MovieDto;
 import dev.aziz.movies.dtos.ReducedMovieDto;
 import dev.aziz.movies.dtos.UpdateMovieDto;
+import dev.aziz.movies.entities.Movie;
+import dev.aziz.movies.mappers.MovieMapper;
+import dev.aziz.movies.mappers.MovieMapperImpl;
 import dev.aziz.movies.services.MovieService;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -12,7 +16,7 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.ArrayList;
+import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 
@@ -30,7 +34,16 @@ class MovieControllerTest {
     @MockBean
     public MovieService movieService;
 
-    private ObjectMapper objectMapper = new ObjectMapper();
+    @Autowired
+    public ObjectMapper objectMapper;
+
+    private static MovieMapper movieMapper;
+
+    @BeforeAll
+    public static void setUp() {
+        movieMapper = new MovieMapperImpl();
+    }
+
 
     @Test
     void getMoviesTest() throws Exception {
@@ -50,26 +63,26 @@ class MovieControllerTest {
                 .andExpect(jsonPath("$[0].title").value("Titanic"))
                 .andExpect(jsonPath("$[1].title").value("The Shawshank Redemption"))
                 .andExpect(jsonPath("$[2].title").value("The Godfather"))
-                .andExpect(jsonPath("$[0].year").value(1997))
-                .andExpect(jsonPath("$[1].year").value(1994))
-                .andExpect(jsonPath("$[2].year").value(1972));
+                .andExpect(jsonPath("$[0].producedYear").value(1997))
+                .andExpect(jsonPath("$[1].producedYear").value(1994))
+                .andExpect(jsonPath("$[2].producedYear").value(1972));
     }
 
     @Test
     void getMovieTest() throws Exception {
         //given
-        List<MovieDto> movieDtoList = List.of(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane, Kathy Bates, Frances Fisher", "Drama", Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", "Tim Robbins, Morgan Freeman, Bob Gunton, William Sandler, Clancy Brown", "Drama", Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan, Richard S. Castellano, Robert Duvall", "Crime", Instant.now(), Instant.now())
         );
         //when
-        when(movieService.findMovieById(1L)).thenReturn(movieDtoList.get(0));
+        when(movieService.findMovieById(1L)).thenReturn(movieMapper.movieToMovieDto(movieList.get(0)));
         //then
         mockMvc.perform(get("/movies/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.title").value("Titanic"))
-                .andExpect(jsonPath("$.year").value("1997"))
+                .andExpect(jsonPath("$.producedYear").value("1997"))
                 .andExpect(jsonPath("$.genre").value("Drama"))
                 .andExpect(jsonPath("$.director").value("James Cameron"));
     }
@@ -77,12 +90,12 @@ class MovieControllerTest {
     @Test
     void createMovie() throws Exception {
         //given
-        MovieDto movie = new MovieDto(4L, "The Dark Knight", "When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.", 2008, 5, "Christopher Nolan", List.of("Christian Bale", "Heat Ledger", "Aaron Eckhart", "Michael Caine", "Cillian Murphy"), "Action");
+        Movie movie = new Movie(4L, "The Dark Knight", "When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.", 2008, 5, "Christopher Nolan", "Christian Bale, Heat Ledger, Aaron Eckhart, Michael Caine, Cillian Murphy", "Action", Instant.now(), Instant.now());
 
         String movieJson = objectMapper.writeValueAsString(movie);
 
         //when
-        when(movieService.createMovie(movie)).thenReturn(movie);
+        when(movieService.createMovie(movie)).thenReturn(movieMapper.movieToMovieDto(movie));
 
         //then
         mockMvc.perform(post("/movies")
@@ -98,29 +111,29 @@ class MovieControllerTest {
     @Test
     void deleteMovie() throws Exception {
         //given
-        List<MovieDto> movieDtoList = List.of(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane, Kathy Bates, Frances Fisher", "Drama", Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", "Tim Robbins, Morgan Freeman, Bob Gunton, William Sandler, Clancy Brown", "Drama", Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan, Richard S. Castellano, Robert Duvall", "Crime", Instant.now(), Instant.now())
         );
 
         //when
-        when(movieService.findMovieById(1L)).thenReturn(movieDtoList.get(0));
+        when(movieService.findMovieById(1L)).thenReturn(movieMapper.movieToMovieDto(movieList.get(0)));
 
         mockMvc.perform(get("/movies/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.title").value("Titanic"))
-                .andExpect(jsonPath("$.year").value(1997));
+                .andExpect(jsonPath("$.producedYear").value(1997));
     }
 
     @Test
     void updateMovie() throws Exception {
         //given
-        List<MovieDto> movieDtoList = new ArrayList<>(Arrays.asList(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
-        ));
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane, Kathy Bates, Frances Fisher", "Drama", Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", "Tim Robbins, Morgan Freeman, Bob Gunton, William Sandler, Clancy Brown", "Drama", Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan, Richard S. Castellano, Robert Duvall", "Crime", Instant.now(), Instant.now())
+        );
 
         //when
         //then
@@ -133,10 +146,10 @@ class MovieControllerTest {
                 .id(1L)
                 .title("Titanic")
                 .description("Batman")
-                .year(1997)
+                .producedYear(1997)
                 .rate(3)
                 .director("James Cameron")
-                .mainActors(List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"))
+                .mainActors("Leonardo DiCaprio, Kate Winslet, Billy Zane, Kathy Bates, Frances Fisher")
                 .genre("Horror")
                 .build();
         String inputJson = objectMapper.writeValueAsString(updateMovieDto);
@@ -154,11 +167,11 @@ class MovieControllerTest {
     @Test
     void updateFullMovie() throws Exception {
         //given
-        List<MovieDto> movieDtoList = new ArrayList<>(Arrays.asList(
-                new MovieDto(1L, "Titanic", "A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"), "Drama"),
-                new MovieDto(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", List.of("Tim Robbins", "Morgan Freeman", "Bob Gunton", "William Sandler", "Clancy Brown"), "Drama"),
-                new MovieDto(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", List.of("Marlon Brando", "Al Pacino", "James Caan", "Richard S. Castellano", "Robert Duvall"), "Crime")
-        ));
+        List<Movie> movieList = Arrays.asList(
+                new Movie(1L, "Titanic", "TEST A seventeen-year-old aristocrat falls in love with a kind but poor artist aboard the luxurious, ill-fated R.M.S. Titanic.", 1997, 5, "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane, Kathy Bates, Frances Fisher", "Drama", Instant.now(), Instant.now()),
+                new Movie(2L, "The Shawshank Redemption", "Over the course of several years, two convicts form a friendship, seeking consolation and, eventually, redemption through basic compassion.", 1994, 4, "Frank Darabont", "Tim Robbins, Morgan Freeman, Bob Gunton, William Sandler, Clancy Brown", "Drama", Instant.now(), Instant.now()),
+                new Movie(3L, "The Godfather", "Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.", 1972, 3, "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan, Richard S. Castellano, Robert Duvall", "Crime", Instant.now(), Instant.now())
+        );
 
         //when
         //then
@@ -172,10 +185,10 @@ class MovieControllerTest {
                 .id(1L)
                 .title("Titanic")
                 .description("Batman")
-                .year(1997)
+                .producedYear(1997)
                 .rate(3)
                 .director("James Cameron")
-                .mainActors(List.of("Leonardo DiCaprio", "Kate Winslet", "Billy Zane", "Kathy Bates", "Frances Fisher"))
+                .mainActors("Leonardo DiCaprio, Kate Winslet, Billy Zane, Kathy Bates, Frances Fisher")
                 .genre("Horror")
                 .build();
         String inputJson = objectMapper.writeValueAsString(updateMovieDto);
@@ -187,7 +200,6 @@ class MovieControllerTest {
                         .content(inputJson))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.description").value("Batman"))
-//                .andExpect(jsonPath("$.rate").value(3))
                 .andExpect(jsonPath("$.genre").value("Horror"));
     }
 }
